--- a/sty.css
+++ b/sty.css
@@ -12,12 +12,12 @@
 
 .ghhhhhhhh{
     color:green;
-    font-size:25px;
+    font-size:1.5rem;
     text-decoration:none;
 }
 
 .jgg565ghh{
-    font-size:25px;
+    font-size:1.5rem;
     color:black;
     text-decoration:none;
 }
@@ -30,7 +30,7 @@
 
 .ser{
     display:flex;
-    font-size:25px;
+    font-size:1.5rem;
 }
 
 .ser:hover{
@@ -50,7 +50,7 @@
 }
 
 .mag{
-    font-size:25px;
+    font-size:1.5rem;
     height:25px;
     width:35px;
     background-color:pink;
